--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ko">
 
 <head>
-    <title>나이키. Just Do It. Nike.com</title>
     <meta charset="UTF-8">
+    <title>나이키. Just Do It. Nike.com</title>
     <meta name="description" content="나이키_홈페이지">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,7 +59,7 @@
             <div class="mbottom_btn">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="./sub_html/shopping_basket.html">
                             <img src="./img/common/bag_icon.png" alt="가방_아이콘">
                             <span>장바구니</span>
                         </a>
@@ -80,7 +80,7 @@
             </div>
         </div>
     </div>
-    <!-- mobile New Releases area  -->
+    <!-- mobile New Releases area -->
     <div class="mNew_Releases">
         <button>All</button>
         <p>New Releases</p>
@@ -101,6 +101,7 @@
 
     <!-- search btn expand start -->
     <div class="search_expand container">
+        <!-- expand_top -->
         <div class="expand_top">
             <div class="search_logo">
                 <a href="index.html">
@@ -113,6 +114,7 @@
             </div>
             <img class="close" src="./img/common/close_btn.png" alt="닫기_버튼">
         </div>
+        <!-- expand bottom -->
         <div class="expand_bottom">
             <p>추천 검색어</p>
             <ul>
@@ -443,14 +445,15 @@
 
             <!-- hbottom_btn -->
             <div class="hbottom_btn">
-                <input type="text">
-                <a href="#"><img src="./img/common/heart_icon.png" alt="하트_아이콘"></a>
-                <a href="#"><img src="./img/common/bag_icon.png" alt="가방_아이콘"></a>
+                <input type="text" placeholder="찾기">
+                <a href="./sub_html/wishList.html"><img src="./img/common/heart_icon.png" alt="하트_아이콘"></a>
+                <a href="./sub_html/shopping_basket.html"><img src="./img/common/bag_icon.png" alt="가방_아이콘"></a>
             </div>
             <!-- mobile_btn area start -->
             <div class="mobile_btn">
                 <ul>
-                    <li><a href="#"><img src="./img/common/bag_icon.png" alt="가방_아이콘"></a></li>
+                    <li><a href="./sub_html/shopping_basket.html"><img src="./img/common/bag_icon.png" alt="가방_아이콘"></a>
+                    </li>
                     <li><a href="#" class="mobile_btn_search"><img src="./img/common/search_icon.png" alt="돋보기_아이콘"></a>
                     </li>
                     <!-- mgbn_btn -->
@@ -497,13 +500,13 @@
         <section>
             <h3>이번 주 스타일링</h3>
             <div class="banner">
-                <a href="#"><video loop autoplay src="./img/main/section2_banner.mp4" alt="메인_배너"></a>
+                <a href="#"><video loop autoplay src="./img/main/section2_banner.mp4">이 브라우저는 video를 지원하지 않습니다.</a>
             </div>
             <div class="text_area">
                 <h2>여름을 위한 개성 있는 조던 스타일</h2>
                 <p>감각적인 디자인과 기능성 모두를 갖춘 조던 제품과 함께 개성있는 여름 룩을 준비해보세요</p>
                 <a href="#">구매하기</a>
-                <a href="#">이벤트 자세히 보기 &#62;</a>
+                <a href="#">이벤트 자세히 보기</a>
             </div>
         </section>
         <section>
@@ -717,7 +720,9 @@
 
     <!-- footer start -->
     <footer>
+        <!-- ftop area -->
         <div class="ftop inner">
+            <!-- f_menu1 area -->
             <div class="f_menu1">
                 <ul>
                     <li><a href="#">주문배송</a></li>
@@ -727,6 +732,7 @@
                     <li><a href="#">멤버 가입</a></li>
                 </ul>
             </div>
+            <!-- f_menu2 area -->
             <div class="f_menu2">
                 <ul>
                     <li class="f_text">고객센터</li>
@@ -742,12 +748,14 @@
                     <li><a href="#">개인정보처리방침</a></li>
                 </ul>
             </div>
+            <!-- f_menu3 area -->
             <div class="f_menu3">
                 <ul>
                     <li class="f_text">ABOUT</li>
                     <li><a href="#">나이키에 대하여</a></li>
                 </ul>
             </div>
+            <!-- f_menu4 area -->
             <div class="f_menu4">
                 <ul>
                     <li class="f_text">SOCIAL</li>
@@ -760,6 +768,7 @@
                 </ul>
             </div>
         </div>
+        <!-- fmiddle area -->
         <div class="fmiddle">
             <div class="container">
                 <div class="fm_left">
@@ -777,6 +786,7 @@
                 </ul>
             </div>
         </div>
+        <!-- fbottom area -->
         <div class="fbottom inner">
             <address>
                 <span>(유)나이키코리아</span>
