--- a/sub_html/NewReleases.html
+++ b/sub_html/NewReleases.html
@@ -2,8 +2,8 @@
 <html lang="ko">
 
 <head>
-    <title>신상품 전체보기</title>
     <meta charset="UTF-8">
+    <title>신상품 전체보기</title>
     <meta name="description" content="나이키_홈페이지_신상품전체보기">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,7 +59,7 @@
             <div class="mbottom_btn">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="../sub_html/shopping_basket.html">
                             <img src="../img/common/bag_icon.png" alt="가방_아이콘">
                             <span>장바구니</span>
                         </a>
@@ -73,7 +73,7 @@
                     <li>
                         <a href="#">
                             <img src="../img/common/question.png" alt="물음표_아이콘">
-                            <span>장바구니</span>
+                            <span>고객센터</span>
                         </a>
                     </li>
                 </ul>
@@ -101,6 +101,7 @@
 
     <!-- search btn expand start -->
     <div class="search_expand container">
+        <!-- expand_top -->
         <div class="expand_top">
             <div class="search_logo">
                 <a href="index.html">
@@ -113,6 +114,7 @@
             </div>
             <img class="close" src="../img/common/close_btn.png" alt="닫기_버튼">
         </div>
+        <!-- expand_bottom -->
         <div class="expand_bottom">
             <p>추천 검색어</p>
             <ul>
@@ -443,14 +445,15 @@
 
             <!-- hbottom_btn -->
             <div class="hbottom_btn">
-                <input type="text">
-                <a href="#"><img src="../img/common/heart_icon.png" alt="하트_아이콘"></a>
-                <a href="#"><img src="../img/common/bag_icon.png" alt="가방_아이콘"></a>
+                <input type="text" placeholder="찾기">
+                <a href="../sub_html/wishList.html"><img src="../img/common/heart_icon.png" alt="하트_아이콘"></a>
+                <a href="../sub_html/shopping_basket.html"><img src="../img/common/bag_icon.png" alt="가방_아이콘"></a>
             </div>
             <!-- mobile_btn area start -->
             <div class="mobile_btn">
                 <ul>
-                    <li><a href="#"><img src="../img/common/bag_icon.png" alt="가방_아이콘"></a></li>
+                    <li><a href="../sub_html/shopping_basket.html"><img src="../img/common/bag_icon.png"
+                                alt="가방_아이콘"></a></li>
                     <li><a href="#" class="close"><img src="../img/common/search_icon.png" alt="돋보기_아이콘"></a></li>
                     <!-- mgbn_btn -->
                     <li class="mgnb_btn">
@@ -515,7 +518,7 @@
                     <li><input type="checkbox" id="여아"><label for="여아">여아</label></li>
                     <li><input type="checkbox" id="남아"><label for="남아">남아</label></li>
                     <li><input type="checkbox" id="성인공용"><label for="성인공용">성인공용</label></li>
-                    <li><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></li>
+                    <li><a href="#"><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></a></li>
                 </ul>
                 <div class="check_menu_title">아이콘</div>
                 <ul>
@@ -524,7 +527,7 @@
                     <li><input type="checkbox" id="데이브레이크"><label for="데이브레이크">데이브레이크</label></li>
                     <li><input type="checkbox" id="인피니티런"><label for="인피니티런">인피니티 런</label></li>
                     <li><input type="checkbox" id="블레이저"><label for="블레이저">블레이저</label></li>
-                    <li><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></li>
+                    <li><a href="#"><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></a></li>
                 </ul>
                 <div class="check_menu_title">색상</div>
                 <ul class="color_pick">
@@ -540,7 +543,7 @@
                     <li><input type="checkbox" id="주황색"><label for="주황색">주황색</label></li>
                     <li><input type="checkbox" id="분홍색"><label for="분홍색">분홍색</label></li>
                     <li><input type="checkbox" id="보라색"><label for="보라색">보라색</label></li>
-                    <li><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></li>
+                    <li><a href="#"><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></a></li>
                 </ul>
                 <div class="check_menu_title">스포츠</div>
                 <ul>
@@ -549,7 +552,7 @@
                     <li><input type="checkbox" id="농구"><label for="농구">농구</label></li>
                     <li><input type="checkbox" id="축구"><label for="축구">축구</label></li>
                     <li><input type="checkbox" id="트레이닝&짐"><label for="트레이닝&짐">트레이닝&짐</label></li>
-                    <li><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></li>
+                    <li><a href="#"><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></a></li>
                 </ul>
                 <div class="check_menu_title">브랜드</div>
                 <ul>
@@ -557,7 +560,7 @@
                     <li><input type="checkbox" id="NikeLab"><label for="NikeLab">NikeLab</label></li>
                     <li><input type="checkbox" id="나이키스포츠웨어"><label for="나이키스포츠웨어">나이키 스포츠웨어</label></li>
                     <li><input type="checkbox" id="조던"><label for="조던">조던</label></li>
-                    <li><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></li>
+                    <li><a href="#"><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></a></li>
                 </ul>
                 <div class="check_menu_title">에어맥스</div>
                 <ul>
@@ -566,7 +569,7 @@
                     <li><input type="checkbox" id="에어맥스95"><label for="에어맥스95">에어맥스 95</label></li>
                     <li><input type="checkbox" id="에어맥스97"><label for="에어맥스97">에어맥스 97</label></li>
                     <li><input type="checkbox" id="에어맥스2090"><label for="에어맥스2090">에어맥스 2090</label></li>
-                    <li><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></li>
+                    <li><a href="#"><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></a></li>
                 </ul>
             </div>
         </div>
@@ -856,7 +859,9 @@
 
     <!-- footer start -->
     <footer>
+        <!-- ftop area -->
         <div class="ftop inner">
+            <!-- f_menu1 area -->
             <div class="f_menu1">
                 <ul>
                     <li><a href="#">주문배송</a></li>
@@ -866,6 +871,7 @@
                     <li><a href="#">멤버 가입</a></li>
                 </ul>
             </div>
+            <!-- f_menu2 area -->
             <div class="f_menu2">
                 <ul>
                     <li class="f_text">고객센터</li>
@@ -881,12 +887,14 @@
                     <li><a href="#">개인정보처리방침</a></li>
                 </ul>
             </div>
+            <!-- f_menu3 area -->
             <div class="f_menu3">
                 <ul>
                     <li class="f_text">ABOUT</li>
                     <li><a href="#">나이키에 대하여</a></li>
                 </ul>
             </div>
+            <!-- f_menu4 area -->
             <div class="f_menu4">
                 <ul>
                     <li class="f_text">SOCIAL</li>
@@ -899,6 +907,7 @@
                 </ul>
             </div>
         </div>
+        <!-- fmiddle area -->
         <div class="fmiddle">
             <div class="container">
                 <div class="fm_left">
@@ -916,6 +925,7 @@
                 </ul>
             </div>
         </div>
+        <!-- fbottom area -->
         <div class="fbottom inner">
             <address>
                 <span>(유)나이키코리아</span>
