--- a/sub_html/wishList.html
+++ b/sub_html/wishList.html
@@ -59,7 +59,7 @@
             <div class="mbottom_btn">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="../sub_html/shopping_basket.html">
                             <img src="../img/common/bag_icon.png" alt="가방_아이콘">
                             <span>장바구니</span>
                         </a>
@@ -73,7 +73,7 @@
                     <li>
                         <a href="#">
                             <img src="../img/common/question.png" alt="물음표_아이콘">
-                            <span>장바구니</span>
+                            <span>고객센터</span>
                         </a>
                     </li>
                 </ul>
@@ -443,14 +443,15 @@
 
             <!-- hbottom_btn -->
             <div class="hbottom_btn">
-                <input type="text">
-                <a href="#"><img src="../img/common/heart_icon.png" alt="하트_아이콘"></a>
-                <a href="#"><img src="../img/common/bag_icon.png" alt="가방_아이콘"></a>
+                <input type="text" placeholder="찾기">
+                <a href="../sub_html/wishList.html"><img src="../img/common/heart_icon.png" alt="하트_아이콘"></a>
+                <a href="../sub_html/shopping_basket.html"><img src="../img/common/bag_icon.png" alt="가방_아이콘"></a>
             </div>
             <!-- mobile_btn area start -->
             <div class="mobile_btn">
                 <ul>
-                    <li><a href="#"><img src="../img/common/bag_icon.png" alt="가방_아이콘"></a></li>
+                    <li><a href="../sub_html/shopping_basket.html"><img src="../img/common/bag_icon.png"
+                                alt="가방_아이콘"></a></li>
                     <li><a href="#" class="close"><img src="../img/common/search_icon.png" alt="돋보기_아이콘"></a></li>
                     <!-- mgbn_btn -->
                     <li class="mgnb_btn">
@@ -531,7 +532,7 @@
 
             <!-- content_list area start -->
             <div class="content_list">
-                <h2>위시리스트(<em></em>)</h2>
+                <h2>위시리스트</h2>
                 <div class="lnb_button">
                     <a href="#">메뉴</a>
                 </div>
@@ -644,7 +645,9 @@
 
     <!-- footer start -->
     <footer>
+        <!-- ftop area -->
         <div class="ftop inner">
+            <!-- f_menu1 area -->
             <div class="f_menu1">
                 <ul>
                     <li><a href="#">주문배송</a></li>
@@ -654,6 +657,7 @@
                     <li><a href="#">멤버 가입</a></li>
                 </ul>
             </div>
+            <!-- f_menu2 area -->
             <div class="f_menu2">
                 <ul>
                     <li class="f_text">고객센터</li>
@@ -669,12 +673,14 @@
                     <li><a href="#">개인정보처리방침</a></li>
                 </ul>
             </div>
+            <!-- f_menu3 area -->
             <div class="f_menu3">
                 <ul>
                     <li class="f_text">ABOUT</li>
                     <li><a href="#">나이키에 대하여</a></li>
                 </ul>
             </div>
+            <!-- f_menu4 area -->
             <div class="f_menu4">
                 <ul>
                     <li class="f_text">SOCIAL</li>
@@ -687,6 +693,7 @@
                 </ul>
             </div>
         </div>
+        <!-- fmiddle area -->
         <div class="fmiddle">
             <div class="container">
                 <div class="fm_left">
@@ -704,6 +711,7 @@
                 </ul>
             </div>
         </div>
+        <!-- fbottom area -->
         <div class="fbottom inner">
             <address>
                 <span>(유)나이키코리아</span>
