--- a/sub_html/kids.html
+++ b/sub_html/kids.html
@@ -2,8 +2,8 @@
 <html lang="ko">
 
 <head>
-    <title>kids</title>
     <meta charset="UTF-8">
+    <title>kids</title>
     <meta name="description" content="나이키_홈페이지_kids">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,7 +59,7 @@
             <div class="mbottom_btn">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="../sub_html/shopping_basket.html">
                             <img src="../img/common/bag_icon.png" alt="가방_아이콘">
                             <span>장바구니</span>
                         </a>
@@ -443,14 +443,15 @@
 
             <!-- hbottom_btn -->
             <div class="hbottom_btn">
-                <input type="text">
-                <a href="#"><img src="../img/common/heart_icon.png" alt="하트_아이콘"></a>
-                <a href="#"><img src="../img/common/bag_icon.png" alt="가방_아이콘"></a>
+                <input type="text" placeholder="찾기">
+                <a href="../sub_html/wishList.html"><img src="../img/common/heart_icon.png" alt="하트_아이콘"></a>
+                <a href="../sub_html/shopping_basket.html"><img src="../img/common/bag_icon.png" alt="가방_아이콘"></a>
             </div>
             <!-- mobile_btn area start -->
             <div class="mobile_btn">
                 <ul>
-                    <li><a href="#"><img src="../img/common/bag_icon.png" alt="가방_아이콘"></a></li>
+                    <li><a href="../sub_html/shopping_basket.html"><img src="../img/common/bag_icon.png"
+                                alt="가방_아이콘"></a></li>
                     <li><a href="#" class="mobile_btn_search"><img src="../img/common/search_icon.png"
                                 alt="돋보기_아이콘"></a>
                     </li>
@@ -898,7 +899,9 @@
 
     <!-- footer start -->
     <footer>
+        <!-- ftop area -->
         <div class="ftop inner">
+            <!-- f_menu1 area -->
             <div class="f_menu1">
                 <ul>
                     <li><a href="#">주문배송</a></li>
@@ -908,6 +911,7 @@
                     <li><a href="#">멤버 가입</a></li>
                 </ul>
             </div>
+            <!-- f_menu2 area -->
             <div class="f_menu2">
                 <ul>
                     <li class="f_text">고객센터</li>
@@ -923,12 +927,14 @@
                     <li><a href="#">개인정보처리방침</a></li>
                 </ul>
             </div>
+            <!-- f_menu3 area -->
             <div class="f_menu3">
                 <ul>
                     <li class="f_text">ABOUT</li>
                     <li><a href="#">나이키에 대하여</a></li>
                 </ul>
             </div>
+            <!-- f_menu4 area -->
             <div class="f_menu4">
                 <ul>
                     <li class="f_text">SOCIAL</li>
@@ -941,6 +947,7 @@
                 </ul>
             </div>
         </div>
+        <!-- fmiddle area -->
         <div class="fmiddle">
             <div class="container">
                 <div class="fm_left">
@@ -958,6 +965,7 @@
                 </ul>
             </div>
         </div>
+        <!-- fbottom area -->
         <div class="fbottom inner">
             <address>
                 <span>(유)나이키코리아</span>
