--- a/sub_html/shopping_basket.html
+++ b/sub_html/shopping_basket.html
@@ -469,7 +469,206 @@
     <!-- header area end -->
 
     <!-- content area start -->
-    <div class="container"></div>
+    <div class="content_area">
+        <div class="shopping_basket_title">
+            <h2>장바구니</h2>
+            <p>1개 상품</p>
+        </div>
+        <div class="shopping_basket_info">
+            <p>사용 가능한 쿠폰이 있습니다.<br>아래 프로모 코드 입력란에 입력하여 사용하세요.</p>
+        </div>
+        <div class="content_wrap">
+            <div class="content_wrap_top">
+                <div class="shop_list">
+                    <div class="delete_all">
+                        <a href="#">전체삭제</a>
+                    </div>
+                    <div class="item_wrap">
+                        <img class="thumbnail" src="../img/shoppimg_basket/shoes01.jpg" alt="">
+                        <div class="item_wrap_text">
+                            <div class="item_info">
+                                <h4>조던 MA2 파리 생제르맹</h4>
+                                <p>스타일 : DJ2657-104</p>
+                                <p>사이즈 : 260</p>
+                                <p>수량 : 1</p>
+                                <ul>
+                                    <li><a href="#">위시리스트에 추가</a></li>
+                                    <li><a href="#">나중에 구매하기</a></li>
+                                </ul>
+                            </div>
+                            <div class="option_change">
+                                <a href="#">옵션 변경</a>
+                                <span>149,000원</span>
+                            </div>
+                        </div>
+                        <img class="close_btn" src="../img/shoppimg_basket/item_close.png" alt="아이템_닫기버튼">
+                    </div>
+                    <div class="item_wrap">
+                        <img class="thumbnail" src="../img/shoppimg_basket/shoes02.jpg" alt="">
+                        <div class="item_wrap_text">
+                            <div class="item_info">
+                                <h4>나이키 에어 리프트 브리드</h4>
+                                <p>스타일 : DJ2657-104</p>
+                                <p>사이즈 : 260</p>
+                                <p>수량 : 1</p>
+                                <ul>
+                                    <li><a href="#">위시리스트에 추가</a></li>
+                                    <li><a href="#">나중에 구매하기</a></li>
+                                </ul>
+                            </div>
+                            <div class="option_change">
+                                <a href="#">옵션 변경</a>
+                                <span>149,000원</span>
+                            </div>
+
+                        </div>
+                        <img class="close_btn" src="../img/shoppimg_basket/item_close.png" alt="아이템_닫기버튼">
+                    </div>
+                </div>
+                <div class="right_order_area">
+                    <div class="order">
+                        <h3>주문예정금액</h3>
+                        <div class="div_wrap">
+                            <div class="order_money"><span>상품 금액</span><span>149,000원</span></div>
+                            <div class="order_delivery"><span>예상 배송비</span><span>0원</span></div>
+                            <div class="order_product_discount"><span>상품 할인 금액</span><span>0원</span></div>
+                            <div class="order_discount"><span>주문 할인 금액</span><span>0원</span></div>
+                            <div class="order_total"><span>총 결제 예정 금액</span><span>149,000원</span></div>
+                            <a href="#">주문하기</a>
+                        </div>
+                    </div>
+                    <div class="offer_code">
+                        <p class="offer_code_number">* 오퍼코드 : <em>0000abcdef0nike</em></p>
+                        <p class="offer_code_number_info">* 사용 가능한 신규가입 쿠폰이 있습니다.(1만원 할인 적용되며 장바구니 전체에 5만원 이상 구매 시
+                            적용됩니다)
+                        </p>
+                        <input type="text" placeholder="프로모 코드 입력"><button>적용</button>
+                        <p class="offer_info">* 장기간 장가부니에 보관하신 상품은 시간이 지남에 따라 가격과 혜택이 변동될 수 있으며, 최대 30일동안 보관됩니다.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="recomend_product">
+                <h3>추천 상품</h3>
+                <div class="swiper-container recomendSlider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="item_wrap">
+                                <div class="item">
+                                    <a href="#">
+                                        <img src="../img/men/shoes1.jpg" alt="운동화1">
+                                    </a>
+                                    <div class="item_text">
+                                        <h4>나이키 데브레이크</h4>
+                                        <p>여성 신발 라이프 스타일</p>
+                                        <p>107,100원</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="item_wrap">
+                                <div class="item">
+                                    <a href="#">
+                                        <img src="../img/men/shoes2.jpg" alt="운동화2">
+                                    </a>
+                                    <div class="item_text">
+                                        <h4>나이키 에어맥스 97</h4>
+                                        <p>여성 신발 라이프 스타일</p>
+                                        <p>199,000원</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="item_wrap">
+                                <div class="item">
+                                    <a href="#">
+                                        <img src="../img/men/shoes3.jpg" alt="운동화3">
+                                    </a>
+                                    <div class="item_text">
+                                        <h4>나이키 에어 포스 1'07 LV8</h4>
+                                        <p>남성 신발 라이프 스타일</p>
+                                        <p>139,000원</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="item_wrap">
+                                <div class="item">
+                                    <a href="#">
+                                        <img src="../img/men/shoes4.jpg" alt="운동화4">
+                                    </a>
+                                    <div class="item_text">
+                                        <h4>나이키 에어 줌 템포 넥스트%</h4>
+                                        <p>남성 신발 러닝</p>
+                                        <p>239,000원</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="item_wrap">
+                                <div class="item">
+                                    <a href="#">
+                                        <img src="../img/men/shoes5.jpg" alt="운동화5">
+                                    </a>
+                                    <div class="item_text">
+                                        <h4>나이키 코스믹 유니티</h4>
+                                        <p>성인공용 신발 농구</p>
+                                        <p>179,000원</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="item_wrap">
+                                <div class="item">
+                                    <a href="#">
+                                        <img src="../img/men/shoes6.jpg" alt="운동화6">
+                                    </a>
+                                    <div class="item_text">
+                                        <h4>나이키 에어맥스 270G</h4>
+                                        <p>성인공용 신발 골프</p>
+                                        <p>199,000원</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="item_wrap">
+                                <div class="item">
+                                    <a href="#">
+                                        <img src="../img/men/shoes7.jpg" alt="운동화7">
+                                    </a>
+                                    <div class="item_text">
+                                        <h4>나이키 에어 줌 슈퍼렙 2 넥스트 네이처</h4>
+                                        <p>남성 신발 트레이닝</p>
+                                        <p>159,000원</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="item_wrap">
+                                <div class="item">
+                                    <a href="#">
+                                        <img src="../img/men/shoes8.jpg" alt="운동화8">
+                                    </a>
+                                    <div class="item_text">
+                                        <h4>나이키 머큐리얼 베이퍼 14 엘리트 FG</h4>
+                                        <p>성인공용 신발 축구</p>
+                                        <p>289,000원</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- content area end -->
 
     <!-- footer start -->
