--- a/sub_html/shopping_basket.html
+++ b/sub_html/shopping_basket.html
@@ -528,7 +528,7 @@
                 <div class="right_order_area">
                     <div class="order">
                         <h3>주문예정금액</h3>
-                        <div class="div_wrap">
+                        <div class="order_div_wrap">
                             <div class="order_money"><span>상품 금액</span><span>149,000원</span></div>
                             <div class="order_delivery"><span>예상 배송비</span><span>0원</span></div>
                             <div class="order_product_discount"><span>상품 할인 금액</span><span>0원</span></div>
