html, css w3c validator
html, css w3c validator에서 체크하여 문법 틀린 부분을 수정했습니다.

--- a/sub_html/wishList.html
+++ b/sub_html/wishList.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../css/swiper-bundle.css">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/wishList.css">
-    <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" defer src="../js/common.js"></script>
+    <script src="../js/jquery-3.5.1.min.js"></script>
+    <script defer src="../js/common.js"></script>
 
 </head>
 
@@ -735,8 +735,8 @@
         </div>
     </footer>
     <!-- footer end -->
-    <script type="text/javascript" src="../js/swiper-bundle.js"></script>
-    <script type="text/javascript" src="../js/wishList.js"></script>
+    <script src="../js/swiper-bundle.js"></script>
+    <script src="../js/wishList.js"></script>
 </body>
 
 </html>
