--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./css/swiper-bundle.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/style.css">
-    <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" defer src="./js/common.js"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script defer src="./js/common.js"></script>
 
 </head>
 
@@ -500,7 +500,7 @@
         <section>
             <h3>이번 주 스타일링</h3>
             <div class="banner">
-                <a href="#"><video loop autoplay src="./img/main/section2_banner.mp4">이 브라우저는 video를 지원하지 않습니다.</a>
+                <a href="#"><video loop autoplay src="./img/main/section2_banner.mp4">이 브라우저는 video를 지원하지 않습니다.</video>></a>
             </div>
             <div class="text_area">
                 <h2>여름을 위한 개성 있는 조던 스타일</h2>
@@ -810,8 +810,8 @@
         </div>
     </footer>
     <!-- footer end -->
-    <script type="text/javascript" src="./js/swiper-bundle.js"></script>
-    <script type="text/javascript" src="./js/main.js"></script>
+    <script src="./js/swiper-bundle.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
