--- a/sub_html/kids.html
+++ b/sub_html/kids.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../css/swiper-bundle.css">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/kids.css">
-    <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" defer src="../js/common.js"></script>
+    <script src="../js/jquery-3.5.1.min.js"></script>
+    <script defer src="../js/common.js"></script>
 
 </head>
 
@@ -989,8 +989,8 @@
         </div>
     </footer>
     <!-- footer end -->
-    <script type="text/javascript" src="../js/swiper-bundle.js"></script>
-    <script type="text/javascript" src="../js/kids.js"></script>
+    <script src="../js/swiper-bundle.js"></script>
+    <script src="../js/kids.js"></script>
 </body>
 
 </html>
