--- a/sub_html/men.html
+++ b/sub_html/men.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../css/swiper-bundle.css">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/men.css">
-    <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" defer src="../js/common.js"></script>
+    <script src="../js/jquery-3.5.1.min.js"></script>
+    <script defer src="../js/common.js"></script>
 
 </head>
 
@@ -572,7 +572,7 @@
         </section>
         <section>
             <div class="banner">
-                <a href="#"><video loop autoplay src="../img/men/section7_img.mp4" alt="배너_동영상1"></a>
+                <a href="#"><video loop autoplay src="../img/men/section7_img.mp4">동영상이 지원되지 않는 브라우저 입니다.</video>></a>
             </div>
             <div class="text_area">
                 <h2>크레이터 임팩트</h2>
@@ -583,7 +583,7 @@
         </section>
         <section>
             <div class="banner">
-                <a href="#"><video loop autoplay src="../img/men/section8_img.mp4" alt="배너_동영상1"></a>
+                <a href="#"><video loop autoplay src="../img/men/section8_img.mp4">동영상이 지원되지 않는 브라우저 입니다.</video>></a>
             </div>
             <div class="text_area">
                 <h2>나이키닷컴 커스텀 서비스</h2>
@@ -970,8 +970,8 @@
         </div>
     </footer>
     <!-- footer end -->
-    <script type="text/javascript" src="../js/swiper-bundle.js"></script>
-    <script type="text/javascript" src="../js/men.js"></script>
+    <script src="../js/swiper-bundle.js"></script>
+    <script src="../js/men.js"></script>
 </body>
 
 </html>
