--- a/sub_html/shopping_basket.html
+++ b/sub_html/shopping_basket.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../css/swiper-bundle.css">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/shopping_basket.css">
-    <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" defer src="../js/common.js"></script>
+    <script src="../js/jquery-3.5.1.min.js"></script>
+    <script defer src="../js/common.js"></script>
 
 </head>
 
@@ -528,7 +528,7 @@
                 <div class="right_order_area">
                     <div class="order">
                         <h3>주문예정금액</h3>
-                        <div class="div_wrap">
+                        <div class="order_div_wrap">
                             <div class="order_money"><span>상품 금액</span><span>149,000원</span></div>
                             <div class="order_delivery"><span>예상 배송비</span><span>0원</span></div>
                             <div class="order_product_discount"><span>상품 할인 금액</span><span>0원</span></div>
@@ -756,8 +756,8 @@
         </div>
     </footer>
     <!-- footer end -->
-    <script type="text/javascript" src="../js/swiper-bundle.js"></script>
-    <script type="text/javascript" src="../js/shopping_basket.js"></script>
+    <script src="../js/swiper-bundle.js"></script>
+    <script src="../js/shopping_basket.js"></script>
 </body>
 
 </html>
