--- a/sub_html/women.html
+++ b/sub_html/women.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../css/swiper-bundle.css">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/women.css">
-    <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" defer src="../js/common.js"></script>
+    <script src="../js/jquery-3.5.1.min.js"></script>
+    <script defer src="../js/common.js"></script>
 
 </head>
 
@@ -511,7 +511,7 @@
         <section>
             <h3>이번 주 스타일링</h3>
             <div class="banner">
-                <a href="#"><video autoplay loop src="../img/women/section2_banner.mp4" alt="배너_이미지2"></a>
+                <a href="#"><video autoplay loop src="../img/women/section2_banner.mp4">동영상을 해당 브라우저에서 지원하지 않습니다.</video>></a>
             </div>
             <div class="text_area">
                 <h2>나이키 썸머 에센셜</h2>
@@ -943,8 +943,8 @@
         </div>
     </footer>
     <!-- footer end -->
-    <script type="text/javascript" src="../js/swiper-bundle.js"></script>
-    <script type="text/javascript" src="../js/women.js"></script>
+    <script src="../js/swiper-bundle.js"></script>
+    <script src="../js/women.js"></script>
 </body>
 
 </html>
