3개의 html파일에 video tag의 끝나는 태그가 없어서  추가했습니다.

--- a/sub_html/men.html
+++ b/sub_html/men.html
@@ -572,7 +572,7 @@
         </section>
         <section>
             <div class="banner">
-                <a href="#"><video loop autoplay src="../img/men/section7_img.mp4">동영상이 지원되지 않는 브라우저 입니다.</video>></a>
+                <a href="#"><video loop autoplay src="../img/men/section7_img.mp4">동영상이 지원되지 않는 브라우저 입니다.</video></a>
             </div>
             <div class="text_area">
                 <h2>크레이터 임팩트</h2>
@@ -583,7 +583,7 @@
         </section>
         <section>
             <div class="banner">
-                <a href="#"><video loop autoplay src="../img/men/section8_img.mp4">동영상이 지원되지 않는 브라우저 입니다.</video>></a>
+                <a href="#"><video loop autoplay src="../img/men/section8_img.mp4">동영상이 지원되지 않는 브라우저 입니다.</video></a>
             </div>
             <div class="text_area">
                 <h2>나이키닷컴 커스텀 서비스</h2>
