--- a/sub_html/women.html
+++ b/sub_html/women.html
@@ -511,7 +511,8 @@
         <section>
             <h3>이번 주 스타일링</h3>
             <div class="banner">
-                <a href="#"><video autoplay loop src="../img/women/section2_banner.mp4">동영상을 해당 브라우저에서 지원하지 않습니다.</video>></a>
+                <a href="#"><video autoplay loop src="../img/women/section2_banner.mp4">동영상을 해당 브라우저에서 지원하지
+                        않습니다.</video></a>
             </div>
             <div class="text_area">
                 <h2>나이키 썸머 에센셜</h2>
