--- a/index.html
+++ b/index.html
@@ -500,7 +500,8 @@
         <section>
             <h3>이번 주 스타일링</h3>
             <div class="banner">
-                <a href="#"><video loop autoplay src="./img/main/section2_banner.mp4">이 브라우저는 video를 지원하지 않습니다.</video>></a>
+                <a href="#"><video loop autoplay src="./img/main/section2_banner.mp4">이 브라우저는 video를 지원하지
+                        않습니다.</video></a>
             </div>
             <div class="text_area">
                 <h2>여름을 위한 개성 있는 조던 스타일</h2>
