1. 전체삭제 버튼 이슈 수정
1. 장바구니에서 전체삭제 버튼을 클릭 시 아래 슬라이드 이미지까지 삭제되는 이슈를 개선했습니다.
이슈가 발생한 이유는 동일한 클래스 이름이였으며 제품 영역의 클래스 이름을 item_list로 변경했습니다.

--- a/sub_html/shopping_basket.html
+++ b/sub_html/shopping_basket.html
@@ -483,9 +483,9 @@
                     <div class="delete_all">
                         <a href="#">전체삭제</a>
                     </div>
-                    <div class="item_wrap">
+                    <div class="item_list">
                         <img class="thumbnail" src="../img/shoppimg_basket/shoes01.jpg" alt="">
-                        <div class="item_wrap_text">
+                        <div class="item_list_text">
                             <div class="item_info">
                                 <h4>조던 MA2 파리 생제르맹</h4>
                                 <p>스타일 : DJ2657-104</p>
@@ -503,9 +503,9 @@
                         </div>
                         <img class="close_btn" src="../img/shoppimg_basket/item_close.png" alt="아이템_닫기버튼">
                     </div>
-                    <div class="item_wrap">
+                    <div class="item_list">
                         <img class="thumbnail" src="../img/shoppimg_basket/shoes02.jpg" alt="">
-                        <div class="item_wrap_text">
+                        <div class="item_list_text">
                             <div class="item_info">
                                 <h4>나이키 에어 리프트 브리드</h4>
                                 <p>스타일 : DJ2657-104</p>
